--- a/package.json
+++ b/package.json
@@ -11,5 +11,8 @@
     "@faker-js/faker": "^9.6.0",
     "@playwright/test": "^1.51.1",
     "@types/node": "^22.13.17"
+  },
+  "dependencies": {
+    "dotenv": "^16.4.7"
   }
 }
