--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-BASE_URL=https://ecommerce-playground.lambdatest.io/
+#BASE_URL=https://ecommerce-playground.lambdatest.io/
+BASE_URL=https://ecommerce-playground.lambdatest.io/index.php?route=account/register
