Ajuste da BASE_URL e teste com hover()

--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-#BASE_URL=https://ecommerce-playground.lambdatest.io/
-BASE_URL=https://ecommerce-playground.lambdatest.io/index.php?route=account/register
+BASE_URL=https://ecommerce-playground.lambdatest.io/
+#BASE_URL=https://ecommerce-playground.lambdatest.io/index.php?route=account/register
