--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
 BASE_URL=https://ecommerce-playground.lambdatest.io/
+USER=Lucas Rosa
+TEST_VERSION=1.0.0
 #BASE_URL=https://ecommerce-playground.lambdatest.io/index.php?route=account/register
