--- a/package.json
+++ b/package.json
@@ -2,7 +2,10 @@
   "name": "curos-playwright-ft",
   "version": "1.0.0",
   "main": "index.js",
-  "scripts": {},
+  "scripts": {
+    "test": "playwright test",
+    "report": "allure generate allure-results --clean -o allure-report && allure open allure-report"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
@@ -10,7 +13,9 @@
   "devDependencies": {
     "@faker-js/faker": "^9.6.0",
     "@playwright/test": "^1.51.1",
-    "@types/node": "^22.13.17"
+    "@types/node": "^22.13.17",
+    "allure-commandline": "^2.33.0",
+    "allure-playwright": "^3.2.1"
   },
   "dependencies": {
     "dotenv": "^16.4.7"
