--- a/package.json
+++ b/package.json
@@ -3,9 +3,10 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "playwright test",
-    "report": "allure generate allure-results --clean -o allure-report && allure open allure-report"
-  },
+    "clean": "rimraf allure-results allure-report",
+   "test": "npm run clean && playwright test",
+   "report": "allure generate allure-results --clean -o allure-report && allure open allure-report"
+},
   "keywords": [],
   "author": "",
   "license": "ISC",
@@ -15,7 +16,8 @@
     "@playwright/test": "^1.51.1",
     "@types/node": "^22.13.17",
     "allure-commandline": "^2.33.0",
-    "allure-playwright": "^3.2.1"
+    "allure-playwright": "^3.2.1",
+    "rimraf": "^6.0.1"
   },
   "dependencies": {
     "dotenv": "^16.4.7"
